# hetic-raytracing

./: .gitignore  CMakeLists.txt  CMakePresets.json  Object3D.h  main.cpp  scene.txt
src/objects/: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Cube.cpp  Cube.hpp  Light.cpp  Light.hpp  Plan.cpp  Plan.hpp  Rectangle.cpp  Rectangle.hpp  Scene.cpp  Scene.hpp  SceneLoader.cpp  SceneLoader.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp
src/rayimage/: Image.cpp  Image.hpp
src/raymath/: CMakeLists.txt  Color.cpp  Color.hpp  Ray.cpp  Ray.hpp  Vector3.cpp  Vector3.hpp
src/shaders/: hit.hpp
src/utils/: CMakeLists.txt  Interval.cpp  Interval.hpp
